--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "babel src --out-dir lib",
     "prepublish": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./test"
   },
   "repository": {
     "type": "git",
@@ -16,6 +16,7 @@
     "react",
     "react-router",
     "component",
+    "static",
     "hooks",
     "onEnter",
     "onLeave"
@@ -26,9 +27,20 @@
     "url": "https://github.com/voronianski/react-router-hooks-patch/issues"
   },
   "homepage": "https://github.com/voronianski/react-router-hooks-patch#readme",
+  "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0"
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.7.2",
+    "chai": "^3.5.0",
+    "enzyme": "^2.1.0",
+    "jsdom": "^8.1.0",
+    "mocha": "^2.4.5",
+    "react": "^0.14.7",
+    "react-addons-test-utils": "^0.14.7",
+    "react-router": "^2.0.1",
+    "sinon": "^1.17.3"
   }
 }
