--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mocha": "^2.4.5",
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
+    "react-dom": "^0.14.7",
     "react-router": "^2.0.1",
     "sinon": "^1.17.3"
   }
