--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "babel src --out-dir lib",
     "prepublish": "npm run build",
-    "test": "mocha ./test"
+    "test": "mocha ./test",
+    "lint": "eslint ./src"
   },
   "repository": {
     "type": "git",
@@ -30,12 +31,16 @@
   "dependencies": {},
   "devDependencies": {
     "babel-cli": "^6.6.5",
+    "babel-eslint": "^5.0.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
     "chai": "^3.5.0",
     "enzyme": "^2.1.0",
+    "eslint": "^2.4.0",
+    "estraverse": "^4.2.0",
+    "estraverse-fb": "^1.3.1",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
     "react": "^0.14.7",
